--- a/src/Menu.module.css
+++ b/src/Menu.module.css
@@ -1,4 +1,4 @@
-#flyoutMenu {
+.flyoutMenu {
     width: 100vw;
     height: 100vh;
     background-color: #FFE600;
@@ -9,23 +9,24 @@
     cubic-bezier(0, .52, 0, 1);
     overflow: scroll;
     z-index: 1000;
+
 }
 
-#flyoutMenu.hide {
+.hide {
     transform: translate3d(-100vw, 0, 0);
 }
 
-#flyoutMenu.show {
+.show {
     transform: translate3d(0vw, 0, 0);
     overflow: hidden;
 }
 
-#flyoutMenu h2 a {
+.flyoutMenu h2 a {
     color: #333;
     margin-left: 15px;
     text-decoration: none;
 }
 
-#flyoutMenu h2 a:hover {
+.flyoutMenu h2 a:hover {
     text-decoration: underline;
 }
